Bug 1872496 - WebTransport: Fix WebTransport's stream closure. r=jesup,necko-reviewers

When using the webtransport's stream in a pipeto, the
NS_BASE_STREAM_CLOSED is not filtered and prevents sometimes (1 out of
20) a proper closure and sending of remaining data of the bidirectional stream.
The change prevents this problem.

Differential Revision: https://phabricator.services.mozilla.com/D202083